# sqlite_diffx

./: README.md  __init__.py  pyproject.toml
api/: __init__.py  public.py
cli/: __init__.py  main.py
core/: __init__.py  data_diff.py  diff_engine.py  introspector.py  patch.py  rules.py  schema.py
output/: __init__.py  formatter.py  json_out.py
sqlite_diffx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_api.py  test_data_diff.py  test_diff_engine.py  test_introspector.py  test_patch.py  test_rules.py
utils/: __init__.py  db.py
