[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-diffx"
version = "0.1.0"
description = "Git-like diff tool for SQLite databases"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["sqlite", "diff", "migration", "schema", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Zero runtime dependencies — stdlib only
dependencies = []

[project.scripts]
diffx = "sqlite_diffx.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sqlite_diffx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["sqlite_diffx"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
